# srl_projection

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml
cmake/: SRLProjectionConfig.cmake.in
include/srl/: typedefs.hpp
include/srl/projection/: DistortionBase.hpp  EquidistantDistortion.hpp  NoDistortion.hpp  OusterLidar.hpp  PinholeCamera.hpp  ProjectionBase.hpp  RadialTangentialDistortion.hpp  RadialTangentialDistortion8.hpp  SphericalCamera.hpp
include/srl/projection/implementation/: EquidistantDistortion.hpp  OusterLidar.hpp  PinholeCamera.hpp  ProjectionBase.hpp  RadialTangentialDistortion.hpp  RadialTangentialDistortion8.hpp  SphericalCamera.hpp
src/: ProjectionBase.cpp
test/: CMakeLists.txt  TestOusterLidar.cpp  TestPinholeCamera.cpp  TestSphericalCamera.cpp  runTests.cpp
